# hackathon_nu26

./: .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
deploy/: init-postgres.sh  nginx.conf  prometheus.yml  promtail.yml
deploy/grafana/dashboards/: locomotive-digital-twin.json
deploy/grafana/provisioning/datasources/: prometheus.yml
frontend/dashboard/: Dockerfile  biome.json  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/dashboard/src/: providers.tsx
frontend/dashboard/src/app/: globals.css  layout.tsx  page.tsx
frontend/dashboard/src/store/: authSlice.ts  selectors.ts  store.ts
frontend/dashboard/src/test/: setup.ts  utils.tsx
frontend/dashboard/src/theme/: theme.ts
services/analytics-service/: Dockerfile  alembic.ini  main.py  pyproject.toml
services/analytics-service/alembic/: env.py
services/analytics-service/alembic/versions/: 5c42cb1eeecd_initial_timescaledb_schema.py  a1f7c9d4e2b0_realtime_cagg.py
services/analytics-service/analytics/: aggregator.py  servicer.py
services/analytics-service/analytics/background/: health_cache.py
services/analytics-service/analytics/core/: config.py  database.py  redis_client.py
services/analytics-service/analytics/models/: __init__.py  alert_entity.py  health_entity.py  telemetry_entity.py
services/analytics-service/analytics/repositories/: alert_repository.py  health_repository.py  telemetry_repository.py
services/analytics-service/tests/: conftest.py  test_aggregator.py
services/api-gateway/: Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
services/api-gateway/alembic/: env.py
services/api-gateway/alembic/versions/: 00df70db8965_initial_app_schema.py
services/api-gateway/api_gateway/api/: dependencies.py  router_alerts.py  router_auth.py  router_config.py  router_health.py  router_locomotives.py  router_reports.py  router_routes.py  router_simulator.py  router_telemetry.py  router_ws_ticket.py  ws_telemetry.py
services/api-gateway/api_gateway/background/: alert_persistence.py  health_cache.py
services/api-gateway/api_gateway/core/: auth.py  config.py  database.py  lifespan.py  middleware.py  rabbitmq.py  redis_client.py
services/api-gateway/api_gateway/models/: alert_entity.py  base.py  health_config_entity.py  locomotive_entity.py  query_params.py  report_entity.py  user_entity.py
services/api-gateway/api_gateway/repositories/: alert_repository.py  health_repository.py  locomotive_repository.py  report_repository.py  telemetry_repository.py
services/api-gateway/api_gateway/services/: alert_service.py  auth_service.py  connection_manager.py  health_service.py  locomotive_service.py  realtime_relay.py  report_request_service.py  seed.py  telemetry_query_service.py  telemetry_service.py
services/api-gateway/tests/: conftest.py  test_alert_service.py  test_auth.py  test_health_service_gw.py  test_locomotive_service.py  test_report_request_service.py  test_telemetry_query_service.py  test_ws_telemetry.py
services/db-writer/: Dockerfile  main.py  pyproject.toml
services/db-writer/db_writer/core/: config.py  database.py  redis_client.py
services/db-writer/db_writer/models/: __init__.py  alert_entity.py  health_entity.py  telemetry_entity.py
services/db-writer/db_writer/repositories/: alert_repository.py  health_repository.py  telemetry_repository.py
services/db-writer/db_writer/services/: stream_consumer.py
services/db-writer/tests/: test_stream_consumer.py
services/processor/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
services/processor/alembic/: env.py
services/processor/processor/api/: dependencies.py  router_ingest.py
services/processor/processor/core/: config.py  database.py  lifespan.py  redis_client.py
services/processor/processor/models/: __init__.py  alert_entity.py  health_entity.py  telemetry_entity.py
services/processor/processor/repositories/: alert_repository.py  health_repository.py  (+1 more)
services/processor/tests/: conftest.py  test_alert_evaluator.py  test_filter_service.py  test_health_service.py  test_ingestion_service.py  test_transform_service.py
services/report-service/: Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
services/report-service/alembic/: env.py
services/report-service/report_service/: servicer.py
services/report-service/tests/: conftest.py  test_anomaly_detector.py  test_fleet_analytics_service.py  test_health_index_calculator.py  test_report_formatter.py  test_report_generator.py  test_servicer.py
services/simulator/: Dockerfile  SIMULATOR_PLAN.md  dry_run.py  main.py  pyproject.toml
services/simulator/simulator/: runner.py
services/simulator/simulator/core/: client.py  config.py
services/simulator/simulator/generators/: kz8a.py  noise.py  te33a.py
services/simulator/simulator/models/: fleet.py  locomotive_state.py
services/simulator/simulator/scenarios/: degradation.py  driving.py  emergency.py  highload.py  highspeed.py  normal.py
services/ws-server/: Dockerfile  main.py  pyproject.toml
services/ws-server/tests/: test_connection_manager.py  test_handler.py  test_ticket.py
services/ws-server/ws_server/: connection_manager.py  handler.py
services/ws-server/ws_server/core/: config.py  redis_client.py
shared/: pyproject.toml
shared/data/routes/: aktobe-atyrau.geojson  aktobe-kostanay.geojson  almaty-astana.geojson  almaty-balkhash.geojson  almaty-shymkent.geojson  astana-ekibastuz.geojson  astana-kokshetau.geojson  astana-petropavlovsk.geojson  ekibastuz-pavlodar.geojson  shymkent-turkestan.geojson
shared/proto/: generate.sh  report.proto  telemetry.proto
shared/shared/: constants.py  enums.py  grpc_client.py  log_codes.py  route_geometry.py  streams.py  utils.py  wire.py  ws_ticket.py
shared/shared/observability/: __init__.py  bootstrap.py  logging.py  metrics.py  middleware.py  prometheus.py  tracing.py
shared/shared/schemas/: __init__.py  alert.py  health.py  locomotive.py  report.py  telemetry.py
tools/: import_osm_railways.py
(+116 files in other folders)
