[project]
name = "hackathon-nu26"
version = "0.1.0"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.workspace]
members = [
    "shared",
    "services/processor",
    "services/api-gateway",
    "services/report-service",
    "services/simulator",
]

# ── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "F",      # Pyflakes — unused imports, undefined names
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort — import ordering
    "N",      # pep8-naming
    "UP",     # pyupgrade — modern Python syntax
    "S",      # flake8-bandit — security
    "B",      # flake8-bugbear — common bugs
    "A",      # flake8-builtins — shadowing builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez — enforce tz-aware datetimes
    "T20",    # flake8-print — no print() in prod code
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking — move type-only imports behind TYPE_CHECKING
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async — async pitfalls
    "LOG",    # flake8-logging
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "FBT",    # flake8-boolean-trap
    "PIE",    # flake8-pie — misc lints
    "PL",     # Pylint subset (convention + refactor + error)
    "PERF",   # Perflint — performance anti-patterns
    "FURB",   # refurb — modernize code
]
ignore = [
    "S101",    # assert used — fine in tests
    "S104",    # bind to 0.0.0.0 — expected in containers
    "S105",    # hardcoded password — false positives on config defaults and log codes
    "B008",    # function call in default arg — FastAPI Depends() pattern
    "ARG001",  # unused function arg — common in FastAPI deps/endpoints
    "FBT001",  # boolean positional arg in function def — too noisy for Pydantic
    "FBT002",  # boolean default in function def — same
    "PLR0913", # too many arguments — unavoidable in query services
    "PLW0603", # global statement — used for module-level connection pool singletons
    "PLC0415", # import outside top-level — conditional OTel imports are intentional
    "RUF012",  # mutable class attributes — false positives with SQLAlchemy mapped_column
    "TCH",     # type-checking blocks — adds complexity for minimal benefit
    "SIM108",  # ternary operator — explicit if/else is more readable for complex expressions
    "RUF001",  # ambiguous unicode — Cyrillic characters in Russian docs are intentional
    "RUF002",  # ambiguous unicode in docstrings — same
    "RUF003",  # ambiguous unicode in comments — same
    "PLR2004", # magic values — math/physics constants in formulas
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "PLR2004"]
"**/alembic/**/*.py" = ["F401", "E501"]
"**/models/*.py" = ["A003"]  # allow 'id', 'format' field names in ORM models
"**/ws_telemetry.py" = ["S110"]  # try-except-pass expected for WS disconnect
"**/connection_manager.py" = ["S110", "SIM105", "PLR0912"]  # try-except-pass for best-effort cleanup, queue backpressure
"**/middleware.py" = ["S110"]  # silent skip when no JWT present
"**/alert_service.py" = ["S110"]  # best-effort pubsub cleanup
"**/telemetry_query_service.py" = ["S608"]  # dynamic WHERE built from hardcoded clauses, not user input
"**/health_service.py" = ["S110"]  # best-effort pubsub cleanup
"services/simulator/**/*.py" = ["S311", "PLR0912"]  # pseudo-random is fine for simulation; state machine is branchy
"services/simulator/dry_run.py" = ["T201"]  # print is the point of this script
"services/report-service/**/report_generator.py" = ["S608"]  # SQL f-strings only inject hardcoded WHERE clauses
"services/report-service/**/fleet_analytics_service.py" = ["S608"]
"services/report-service/**/router_analytics.py" = ["S608"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "api_gateway", "processor", "report_service", "simulator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
