[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "uuid-utils>=0.9.0",
    "ormsgpack>=1.5.0",
    "pydantic>=2.10.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-asyncpg>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
    "redis>=5.2.0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
