[project]
name = "analytics-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.70.0",
    "fastapi>=0.135.3",        # Only for /metrics + /health HTTP endpoints
    "uvicorn>=0.43.0",
    "pydantic-settings>=2.7.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.2.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["analytics"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
