[project]
name = "ws-server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.43.0",
    "pydantic-settings>=2.7.0",
    "redis[hiredis]>=5.2.0",
    "shared",
]
# NO asyncpg, NO sqlalchemy, NO bcrypt, NO PyJWT
# This service talks to Redis ONLY

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
